<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_Database_demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_account">Input your username</string>
    <string name="login_pwd">Input your password</string>
    <string name="login_forget_pwd"><u>Forget password?</u></string>
    <string name="login_regist">Regist</string>
    <string name="login_login">Login</string>

    <color name="login_hint_text_color">#ADADAD</color>
    <color name="login_input_text_color">#FFD700</color>
    <color name="login_bg_color">#652d86</color>
    <color name="login_btn_text_color">#fdc82f</color>
    <color name="login_head_border_color">#fdc82f</color>
    <color name="login_text_color">#fdc82f</color>

    <string name="title_activity_regist">RegistActivity</string>
    <string name="regist_change_head">Click to select your head portrait</string>
    <string name="regist_account_hint">Username</string>
    <string name="regist_pwd_hint">Password</string>
    <string name="regist_pwd_confirm">Confirm password</string>
    <string name="regist_submit">Submit</string>
    <string name="regist_question">Set your question</string>
    <string name="regist_answer">Set your answer</string>
    <string name="regist_toast">Set your %1$s please!</string>

    <string name="db_success">Operate Success</string>
    <string name="logined">User:%1$s has logined successfully!</string>

    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_choose_from_photos">Choose from Photos</string>
    <string name="menu_cancel">Cancel</string>
    <color name="menu_bg">#B084C9</color>
    <color name="menu_margin_bg">#281236</color>
</resources>