<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_bg"
        android:text="@string/menu_take_photo" />

    <Button
        android:id="@+id/menu_choose_from_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="1dp"
        android:background="@color/menu_bg"
        android:text="@string/menu_choose_from_photos" />

    <Button
        android:id="@+id/menu_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_bg"
        android:text="@string/menu_cancel" />

</LinearLayout>